--- a/3-3_server-mutation/package.json
+++ b/3-3_server-mutation/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.19.1",
-    "convert-csv-to-json": "^1.0.0"
+    "convert-csv-to-json": "^1.0.0",
+    "graphql": "^15.5.0"
   }
 }
